deploy: 567a1f16fbca96f77e38740587cbc410335ab893

--- a/idioms/priv-extend.html
+++ b/idioms/priv-extend.html
@@ -146,43 +146,121 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="privacy-for-extensibility"><a class="header" href="#privacy-for-extensibility">Privacy for extensibility</a></h1>
+                        <h1 id="non_exhaustive-and-private-fields-for-extensibility"><a class="header" href="#non_exhaustive-and-private-fields-for-extensibility"><code>#[non_exhaustive]</code> and private fields for extensibility</a></h1>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
-<p>Use a private field to ensure that a struct is extensible without breaking
-stability guarantees.</p>
+<p>A small set of scenarios exist where a library author may want to add public
+fields to a public struct or new variants to an enum without breaking backwards
+compatibility.</p>
+<p>Rust offers two solutions to this problem:</p>
+<ul>
+<li>
+<p>Use <code>#[non_exhaustive]</code> on <code>struct</code>s, <code>enum</code>s, and <code>enum</code> variants.
+For extensive documentation on all the places where <code>#[non_exhaustive]</code> can be
+used, see <a href="https://doc.rust-lang.org/reference/attributes/type_system.html#the-non_exhaustive-attribute">the docs</a>.</p>
+</li>
+<li>
+<p>You may add a private field to a struct to prevent it from being directly
+instantiated or matched against (see Alternative)</p>
+</li>
+</ul>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
-<pre><code class="language-rust ignore">mod a {
+<pre><pre class="playground"><code class="language-rust edition2018">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>mod a {
     // Public struct.
+    #[non_exhaustive]
     pub struct S {
         pub foo: i32,
-        // Private field.
-        bar: i32,
+    }
+    
+    #[non_exhaustive]
+    pub enum AdmitMoreVariants {
+        VariantA,
+        VariantB,
+        #[non_exhaustive]
+        VariantC { a: String }
     }
 }
 
-fn main(s: a::S) {
-    // Because S::bar is private, it cannot be named here and we must use `..`
-    // in the pattern.
+fn print_matched_variants(s: a::S) {
+    // Because S is `#[non_exhaustive]`, it cannot be named here and
+    // we must use `..` in the pattern.
     let a::S { foo: _, ..} = s;
-}
+    
+    let some_enum = a::AdmitMoreVariants::VariantA;
+    match some_enum {
+        a::AdmitMoreVariants::VariantA =&gt; println!(&quot;it's an A&quot;),
+        a::AdmitMoreVariants::VariantB =&gt; println!(&quot;it's a b&quot;),
 
-</code></pre>
-<h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
+        // .. required because this variant is non-exhaustive as well
+        a::AdmitMoreVariants::VariantC { a, .. } =&gt; println!(&quot;it's a c&quot;),
+
+        // The wildcard match is required because more variants may be
+        // added in the future
+        _ =&gt; println!(&quot;it's a new variant&quot;)
+    }
+}
+<span class="boring">}
+</span></code></pre></pre>
+<h2 id="alternative-private-fields-for-structs"><a class="header" href="#alternative-private-fields-for-structs">Alternative: <code>Private fields</code> for structs</a></h2>
+<p><code>#[non_exhaustive]</code> only works across crate boundaries.
+Within a crate, the private field method may be used.</p>
 <p>Adding a field to a struct is a mostly backwards compatible change.
 However, if a client uses a pattern to deconstruct a struct instance, they
 might name all the fields in the struct and adding a new one would break that
-pattern. The client could name some fields and use <code>..</code> in the pattern,
-in which case adding another field is backwards compatible. Making at least one
-of the struct's fields private forces clients to use the latter form of patterns,
-ensuring that the struct is future-proof.</p>
+pattern.
+The client could name some fields and use <code>..</code> in the pattern, in which case adding
+another field is backwards compatible.
+Making at least one of the struct's fields private forces clients to use the latter
+form of patterns, ensuring that the struct is future-proof.</p>
 <p>The downside of this approach is that you might need to add an otherwise unneeded
-field to the struct. You can use the <code>()</code> type so that there is no runtime overhead
-and prepend <code>_</code> to the field name to avoid the unused field warning.</p>
-<p>If Rust allowed private variants of enums, we could use the same trick to make
-adding a variant to an enum backwards compatible. The problem there is exhaustive
-match expressions. A private variant would force clients to have a <code>_</code> wildcard
-pattern. A common way to implement this instead is using the <a href="https://doc.rust-lang.org/reference/attributes/type_system.html"><code>#[non_exhaustive]</code></a>
-attribute.</p>
+field to the struct.
+You can use the <code>()</code> type so that there is no runtime overhead and prepend <code>_</code> to
+the field name to avoid the unused field warning.</p>
+<pre><pre class="playground"><code class="language-rust edition2018">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>pub struct S {
+    pub a: i32,
+    // Because `b` is private, you cannot match on `S` without using `..` and `S`
+    //  cannot be directly instantiated or matched against
+    _b: ()
+}
+<span class="boring">}
+</span></code></pre></pre>
+<h2 id="discussion"><a class="header" href="#discussion">Discussion</a></h2>
+<p>On <code>struct</code>s, <code>#[non_exhaustive]</code> allows adding additional fields in a backwards
+compatible way.
+It will also prevent clients from using the struct constructor, even if all the
+fields are public.
+This may be helpful, but it's worth considering if you <em>want</em> an additional field
+to be found by clients as a compiler error rather than something that may be silently
+undiscovered.</p>
+<p><code>#[non_exhaustive]</code> can be applied to enum variants as well.
+A <code>#[non_exhaustive]</code> variant behaves in the same way as a <code>#[non_exhaustive]</code> struct.</p>
+<p>Use this deliberately and with caution: incrementing the major version when adding
+fields or variants is often a better option.
+<code>#[non_exhaustive]</code> may be appropriate in scenarios where you're modeling an external
+resource that may change out-of-sync with your library, but is not a general purpose
+tool.</p>
+<h3 id="disadvantages"><a class="header" href="#disadvantages">Disadvantages</a></h3>
+<p><code>#[non_exhaustive]</code> can make your code much less ergonomic to use, especially when
+forced to handle unknown enum variants.
+It should only be used when these sorts of evolutions are required <strong>without</strong>
+incrementing the major version.</p>
+<p>When <code>#[non_exhaustive]</code> is applied to <code>enum</code>s, it forces clients to handle a
+wildcard variant.
+If there is no sensible action to take in this case, this may lead to awkward
+code and code paths that are only executed in extremely rare circumstances.
+If a client decides to <code>panic!()</code> in this scenario, it may have been better to
+expose this error at compile time.
+In fact, <code>#[non_exhaustive]</code> forces clients to handle the &quot;Something else&quot; case;
+there is rarely a sensible action to take in this scenario.</p>
+<h2 id="see-also"><a class="header" href="#see-also">See also</a></h2>
+<ul>
+<li><a href="https://github.com/rust-lang/rfcs/blob/master/text/2008-non-exhaustive.md">RFC introducing #[non_exhaustive] attribute for enums and structs</a></li>
+</ul>
 
                     </main>
 
