deploy: dca0dfdc29d8f3252c3787c2af5ba75e6466b4d5

--- a/print.html
+++ b/print.html
@@ -207,7 +207,7 @@ coerce to a <code>&amp;str</code> whenever the function is invoked.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>For this example, we will illustrate some differences for using <code>&amp;String</code> as a
 function argument versus using a <code>&amp;str</code>, but the ideas apply as well to using
-<code>&amp;Vec&lt;T&gt;</code> versus using a <code>&amp;[T]</code> or using a <code>&amp;T</code> versus a <code>&amp;Box&lt;T&gt;</code>.</p>
+<code>&amp;Vec&lt;T&gt;</code> versus using a <code>&amp;[T]</code> or using a <code>&amp;Box&lt;T&gt;</code> versus a <code>&amp;T</code>.</p>
 <p>Consider an example where we wish to determine if a word contains three
 consecutive vowels. We don't need to own the string to determine this, so we
 will take a reference.</p>
