deploy: bcf1a7aeae88c667f73d058e068b6279ffd57952

--- a/patterns/behavioural/strategy.html
+++ b/patterns/behavioural/strategy.html
@@ -164,7 +164,7 @@ This is why we call it &quot;Dependency Inversion&quot;.</p>
 We need the reports to be generated in different formats (strategies), e.g.,
 in <code>JSON</code> or <code>Plain Text</code> formats.
 But things vary over time, and we don't know what kind of requirement we may get
-in the future. For example, we may need to generate our report in a completly new
+in the future. For example, we may need to generate our report in a completely new
 format, or just modify one of the existing formats.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>In this example our invariants (or abstractions) are <code>Context</code>, <code>Formatter</code>,
