--- a/index.html
+++ b/index.html
@@ -142,10 +142,16 @@
 <p>If you are interested in contributing to this book, check out the
 <a href="https://github.com/rust-unofficial/patterns/blob/master/CONTRIBUTING.md">contribution guidelines</a>.</p>
 <h2 id="design-patterns"><a class="header" href="#design-patterns">Design patterns</a></h2>
-<p>When developing programs, we have to solve many problems.
-A program can be viewed as a solution to a problem.
-It can also be viewed as a collection of solutions to many problems.
-All of these solutions work together to solve a bigger problem.</p>
+<p>In software development, we often come across problems that share
+similarities regardless of the environment they appear in. Although the
+implementation details are crucial to solve the task at hand, we may
+abstract from these particularities to find the common practices that
+are generically applicable.</p>
+<p>Design patterns are a collection of reusable and tested solutions to
+recurring problems in engineering. They make our software more modular,
+maintainable, and extensible. Moreover, these patterns provide a common
+language for developers to use, making them an excellent tool for effective
+communication when problem-solving in teams.</p>
 <h2 id="design-patterns-in-rust"><a class="header" href="#design-patterns-in-rust">Design patterns in Rust</a></h2>
 <p>There are many problems that share the same form.
 Due to the fact that Rust is not object-oriented, design patterns vary with
