deploy: 482c2b8720060974bcad40a6396097c4db0e6f0d

--- a/print.html
+++ b/print.html
@@ -1201,7 +1201,7 @@ iterator which yields exactly one element. It's a more readable alternative to
 </li>
 <li>
 <p><a href="https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.filter_map"><code>Iterator::filter_map</code></a>
-is a version of <a href="https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.flat_map"><code>Iterator::flat_map</code></a>,
+is a version of <a href="https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.map"><code>Iterator::map</code></a>,
 specialized to mapping functions which return <code>Option</code>.</p>
 </li>
 <li>
