--- a/intro.html
+++ b/intro.html
@@ -150,26 +150,27 @@ are generically applicable.</p>
 <p>Design patterns are a collection of reusable and tested solutions to
 recurring problems in engineering. They make our software more modular,
 maintainable, and extensible. Moreover, these patterns provide a common
-language for developers to use, making them an excellent tool for effective
+language for developers, making them an excellent tool for effective
 communication when problem-solving in teams.</p>
 <h2 id="design-patterns-in-rust"><a class="header" href="#design-patterns-in-rust">Design patterns in Rust</a></h2>
-<p>There are many problems that share the same form.
-Due to the fact that Rust is not object-oriented, design patterns vary with
-respect to other object-oriented programming languages.
-While the details are different, since they have the same form they can be
-solved using the same fundamental methods:</p>
+<p>Rust is not object-oriented, and the combination of all its characteristics,
+such as functional elements, a strong type system, and the borrow checker,
+makes it unique.
+Because of this, Rust design patterns vary with respect to other
+traditional object-oriented programming languages.
+That's why we decided to write this book. We hope you enjoy reading it!
+The book is divided in three main chapters:</p>
 <ul>
-<li><a href="./patterns/index.html">Design patterns</a> are methods to solve common problems
-when writing software.</li>
-<li><a href="./anti_patterns/index.html">Anti-patterns</a> are methods to solve these same
-common problems. However, while design patterns give us benefits,
+<li><a href="./idioms/index.html">Idioms</a>: guidelines to follow when coding.
+They are the social norms of the community.
+You should break them only if you have a good reason for it.</li>
+<li><a href="./patterns/index.html">Design patterns</a>: methods to solve common problems
+when coding.</li>
+<li><a href="./anti_patterns/index.html">Anti-patterns</a>: methods to solve common problems
+when coding.
+However, while design patterns give us benefits,
 anti-patterns create more problems.</li>
-<li><a href="./idioms/index.html">Idioms</a> are guidelines to follow when coding.
-They are social norms of the community.
-You can break them, but if you do you should have a good reason for it.</li>
 </ul>
-<p>TODO: Mention why Rust is a bit special - functional elements, type system,
-borrow checker</p>
 
                     </main>
 
