--- a/anti_patterns/deny-warnings.html
+++ b/anti_patterns/deny-warnings.html
@@ -179,32 +179,32 @@ Travis, but remember that this may break the build when something changes)
 without requiring a change to the code.</p>
 <p>Alternatively, we can specify the lints that we want to <code>deny</code> in the code.
 Here is a list of warning lints that is (hopefully) safe to deny (as of Rustc 1.48.0):</p>
-<pre><code class="language-rust ignore">#[deny(bad-style,
-       const-err,
-       dead-code,
-       improper-ctypes,
-       non-shorthand-field-patterns,
-       no-mangle-generic-items,
-       overflowing-literals,
-       path-statements ,
-       patterns-in-fns-without-body,
-       private-in-public,
-       unconditional-recursion,
+<pre><code class="language-rust ignore">#![deny(bad_style,
+       const_err,
+       dead_code,
+       improper_ctypes,
+       non_shorthand_field_patterns,
+       no_mangle_generic_items,
+       overflowing_literals,
+       path_statements,
+       patterns_in_fns_without_body,
+       private_in_public,
+       unconditional_recursion,
        unused,
-       unused-allocation,
-       unused-comparisons,
-       unused-parens,
-       while-true)]
+       unused_allocation,
+       unused_comparisons,
+       unused_parens,
+       while_true)]
 </code></pre>
 <p>In addition, the following <code>allow</code>ed lints may be a good idea to <code>deny</code>:</p>
-<pre><code class="language-rust ignore">#[deny(missing-debug-implementations,
-       missing-docs,
-       trivial-casts,
-       trivial-numeric-casts,
-       unused-extern-crates,
-       unused-import-braces,
-       unused-qualifications,
-       unused-results)]
+<pre><code class="language-rust ignore">#![deny(missing_debug_implementations,
+       missing_docs,
+       trivial_casts,
+       trivial_numeric_casts,
+       unused_extern_crates,
+       unused_import_braces,
+       unused_qualifications,
+       unused_results)]
 </code></pre>
 <p>Some may also want to add <code>missing-copy-implementations</code> to their list.</p>
 <p>Note that we explicitly did not add the <code>deprecated</code> lint, as it is fairly
